# reform

./: Cargo.toml  README.md  flake.nix
crates/injector/: Cargo.toml  copy.sh
crates/injector/src/: lib.rs
crates/injector/src/form/: field.rs  mod.rs
crates/server/: .env  Cargo.toml
crates/server/migrations/2020-02-13-005405_create_schema/: up.sql
crates/server/src/: auth.rs  config.rs  lib.rs  main.rs  schema.rs
crates/server/src/db/: entries.rs  forms.rs  mod.rs  schemas.rs  users.rs
crates/server/src/models/: entry.rs  form.rs  schema.rs  user.rs
crates/server/src/routes/: entries.rs  forms.rs  mod.rs  schemas.rs  users.rs
crates/server/static/: form.html
crates/site/: .env  Cargo.toml  build.sh  main.js
crates/site/src/: error.rs  lib.rs  types.rs
crates/site/src/api/: entries.rs  forms.rs  mod.rs  schemas.rs
crates/site/src/app/: login_page.rs  mod.rs  signup_page.rs
crates/site/src/app/dashboard_component/: mod.rs
crates/site/src/app/entry/view/: entry_item.rs  mod.rs
crates/site/src/app/form/: mod.rs
crates/site/src/app/form/create/: mod.rs
crates/site/src/app/form/create/field/: choice_field.rs  (+1 more)
crates/site/src/app/form/view/: form_item.rs  mod.rs
crates/site/src/app/index_component/: mod.rs
crates/site/src/app/schema/create/: mod.rs
crates/site/src/app/schema/view/: entry_item.rs  mod.rs  schema_item.rs
crates/site/src/components/: select.rs
flake-parts/: cargo.nix
injector/: Cargo.toml  main.js
injector/src/: lib.rs
injector/src/components/: mod.rs
injector/src/form/: field.rs  mod.rs
server/: .gitignore  Cargo.toml  create_db.sql
server/migrations/2020-02-13-005405_create_schema/: down.sql
server/migrations/2020-02-9-002725_create_users/: up.sql
server/migrations/2020-07-23-172952_create_forms/: up.sql
server/migrations/2020-08-16-031656_add_schema_names/: down.sql  up.sql
server/migrations/src/: schema.rs
server/src/: config.rs  lib.rs  main.rs  schema.rs
server/src/db/: entries.rs  forms.rs  mod.rs  schemas.rs  users.rs
server/src/models/: entry.rs  form.rs  mod.rs  schema.rs  user.rs
server/src/routes/: .entries.rs.swp  entries.rs  forms.rs  schemas.rs  users.rs
server/static/: form.html  index.html
site/: Cargo.toml  copy.sh
site/src/: lib.rs  types.rs
site/src/api/: forms.rs  mod.rs  schemas.rs
site/src/app/: .signup_page.rs.swp  login_page.rs  mod.rs  signup_page.rs
site/src/app/dashboard_component/: mod.rs
site/src/app/entry/view/: entry_item.rs  mod.rs
site/src/app/form/create/: mod.rs
site/src/app/form/create/field/: choice_field.rs  mod.rs
site/src/app/form/create/mapping_page/mapping/: field_selector.rs  mod.rs
site/src/app/form/view/: form_item.rs  mod.rs
site/src/app/form_page/: mod.rs
site/src/app/form_page/create/: mod.rs
site/src/app/form_page/field/: choice_field.rs  mod.rs
site/src/app/form_page/mapping_page/: :13  mapping.rs  mod.rs
site/src/app/form_page/mapping_page/mapping/: field_selector.rs  mod.rs
site/src/app/form_page/view/: form_item.rs  mod.rs
site/src/app/index_component/: mod.rs
site/src/app/schema/: mod.rs
site/src/app/schema/create/: mod.rs
site/src/app/schema/create/field/: choice_field.rs  mod.rs
site/src/app/schema/view/: entry_item.rs  mod.rs  schema_item.rs
site/src/app/schema_page/: entry_item.rs  mod.rs  schema_item.rs
site/src/app/schema_page/create_schema/: .mod.rs.swp  mod.rs
site/src/app/schema_page/create_schema/field/: mod.rs
site/src/auth_agent/: .schemas.rs.swp  entries.rs  forms.rs  mod.rs  schemas.rs
site/src/components/: select.rs
(+5 files in other folders)
