[package]
authors = ["Justin Rubek <rubejus@bvu.edu"]
name = "reform"
version = "0.1.0"
edition = "2018"
license = "Unlicense OR MIT"

repository = "https://github.com/justinrubek/reform"

description = """
A form builder using Rocket and Yew
"""

readme = "README.md"

[dependencies]
chrono = { version = "0.4.10", features = ["serde"] }
diesel = { version = "1.4.3", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
jsonwebtoken = "6.0.1"
rocket = { version = "0.4.2", default-features = false }
rocket_cors = { version = "0.5.1", default-features = false }
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.44"
rust-crypto = "0.2.36"
slug = "0.1.4"
rand = "0.7.2"
validator = "0.10.0"
validator_derive = "0.10.0"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json", "diesel_postgres_pool", "serve"]

[dev-dependencies]
once_cell = "1.2.0"
