[package]
name = "reform-site"
version = "0.1.0"
authors = [ "Justin Rubek <rubejus@bvu.edu>" ]

description = "A front-end form building site"
edition = "2018"
license = "Unlicense OR MIT"

repository = "https://github.com/justinrubek/reform"

readme = "README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
failure = "0.1.6"
serde = "1.0"
serde_json = "1.0"
stdweb = "0.4.20"
yew = "0.11"
wasm-bindgen = "^0.2"
web_logger = "0.2"
