[package]
name = "reform-site"
version = "0.7.2"
authors = [ "Justin Rubek <rubejus@bvu.edu>" ]

description = "A front-end form building site"
edition = "2018"
license = "Unlicense OR MIT"

repository = "https://github.com/justinrubek/reform"

readme = "README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.32"
chrono = "0.4.10"
dotenv_codegen = "0.15.0"
lazy_static = "1.4.0"
log = "0.4"
failure = "0.1.6"
parking_lot = "0.10.0"
serde = "1.0"
serde_json = "1.0"
stdweb = "0.4.20"
# yew = "0.17.2"
# yew-router = "0.14"
wasm-bindgen = "^0.2"
web_logger = "0.2"

[dependencies.yew]
version = "0.14"
default-features = false
features = ["std_web"]
[dependencies.yew-router]
version = "0.11"
default-features = false
features = ["std_web"]
