[package]
name = "reform-injector"
version = { workspace = true }
authors = [ "Justin Rubek <rubejus@bvu.edu>" ]

description = "A form builder that is injected into a page"
edition = "2018"
license = "Unlicense OR MIT"

repository = "https://github.com/justinrubek/reform"

readme = "README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.13"
chrono = "0.4.10"
dotenv_codegen = "0.15.0"
lazy_static = "1.4.0"
log = "0.4"
failure = "0.1.6"
parking_lot = "0.10.0"
serde = "1.0"
serde_json = "1.0"
stdweb = "0.4.20"
yew-components = "0.3.0"
wasm-bindgen = "0.2.84"
web_logger = "0.2"
# yew = { version = "0.20.0", features = ["csr"] }
yew = "0.18"
